add Clean Architecture classes

--- a/booking-meeting-rooms/appsettings.json
+++ b/booking-meeting-rooms/appsettings.json
@@ -1,8 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=booking_meeting_rooms;Username=postgres;Password=postgres"
+  },
+  "BookingSettings": {
+    "MaxTimeSlotHours": 4,
+    "CheckSubmittedForConflicts": false
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
   "AllowedHosts": "*"
