add rooms at startup

--- a/booking-meeting-rooms/appsettings.Development.json
+++ b/booking-meeting-rooms/appsettings.Development.json
@@ -2,6 +2,16 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=booking_meeting_rooms_dev;Username=postgres;Password=postgres"
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
+      "Https": {
+        "Url": "https://localhost:5001"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
