--- a/booking-meeting-rooms/appsettings.json
+++ b/booking-meeting-rooms/appsettings.json
@@ -6,6 +6,16 @@
     "MaxTimeSlotHours": 4,
     "CheckSubmittedForConflicts": false
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
+      "Https": {
+        "Url": "https://localhost:5001"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
