--- a/booking-meeting-rooms/appsettings.json
+++ b/booking-meeting-rooms/appsettings.json
@@ -1,6 +1,10 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=booking_meeting_rooms;Username=postgres;Password=postgres"
+  "PostgreSqlConnection": {
+    "Host": "localhost",
+    "Port": 5432,
+    "Database": "booking_meeting_rooms",
+    "Username": "postgres",
+    "Password": "postgres"
   },
   "BookingSettings": {
     "MaxTimeSlotHours": 4,
@@ -10,9 +14,6 @@
     "Endpoints": {
       "Http": {
         "Url": "http://localhost:5000"
-      },
-      "Https": {
-        "Url": "https://localhost:5001"
       }
     }
   },
