--- a/booking-meeting-rooms/appsettings.json
+++ b/booking-meeting-rooms/appsettings.json
@@ -20,8 +20,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore": "Warning"
+      "Microsoft.AspNetCore": "Debug",
+      "Microsoft.AspNetCore.Hosting.Diagnostics": "Warning",
+      "Microsoft.AspNetCore.Routing": "Debug",
+      "Microsoft.AspNetCore.Mvc": "Debug",
+      "Microsoft.AspNetCore.Mvc.Controllers": "Debug",
+      "Microsoft.EntityFrameworkCore": "Debug",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Debug"
     }
   },
   "AllowedHosts": "*"
