--- a/booking-meeting-rooms/.github/workflows/dotnet.yml
+++ b/booking-meeting-rooms/.github/workflows/dotnet.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET CI
 
 on:
@@ -8,11 +5,12 @@ on:
     branches: [ "master", "main" ]
   pull_request:
     branches: [ "master", "main" ]
-
+  workflow_dispatch:
+  
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v4
@@ -29,8 +27,3 @@ jobs:
     - name: Build
       run: dotnet build --no-restore --configuration Release
     
-    # Тести виконуються тільки якщо є тестовий проект
-    # Поки що тестів немає, тому крок пропущено
-    # Для додавання тестів: створіть тестовий проект та розкоментуйте наступний крок
-    # - name: Test
-    #   run: dotnet test --no-build --verbosity normal
